--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "alpinejs": "^3.14.9",
     "astro": "^5.13.2",
+    "hast-util-whitespace": "^3.0.0",
     "postcss": "^8.5.6"
   },
   "devDependencies": {
